fix text colour in dark mode

--- a/ethernet-view/src/components/MessagesContainer/Messages/MessageView/Counter/Counter.module.scss
+++ b/ethernet-view/src/components/MessagesContainer/Messages/MessageView/Counter/Counter.module.scss
@@ -8,6 +8,6 @@
     font-size: small;
     line-height: 90%;
 
-    color: white;
+    color: var(--main-color); // Use main color for better contrast
     background-color: var(--light-color);
 }
