--- a/ethernet-view/src/components/MessagesContainer/Messages/MessageView/ProtectionMessageView/ProtectionMessageView.module.scss
+++ b/ethernet-view/src/components/MessagesContainer/Messages/MessageView/ProtectionMessageView/ProtectionMessageView.module.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 0.5rem;
+    color: black;
 }
 
 .kindAndOrigin {
